--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "gh-pages": "^4.0.0",
+    "next": "^13.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "18.15.11"
   }
 }
