--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "18.15.11",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "@types/node": "18.15.11"
+    "eslint-config-next": "^13.3.0"
   }
 }
